--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -14,11 +14,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      # - name: Upgrade dependencies
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get install libglpk-dev
-      # - uses: r-lib/actions/setup-r@v2
+      - name: Upgrade dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install libglpk-dev
+      - uses: r-lib/actions/setup-r@v2
       # - name: Set up renv
       #   uses: r-lib/actions/setup-renv@v2
       # - uses: actions/setup-python@v5
