--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -19,6 +19,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install libglpk-dev
       - uses: r-lib/actions/setup-r@v2
+      - name: Install R packages
+        run: |
+         Rscript -e 'install.packages(c("rmarkdown", "knitr"), repos = "https://cloud.r-project.org")'
+
       # - name: Set up renv
       #   uses: r-lib/actions/setup-renv@v2
       # - uses: actions/setup-python@v5
